[project]
name = "voice-ai-core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "kokoro>=0.9.4",
    "numpy>=2.4.6",
    "ollama>=0.6.2",
    "pyaudio>=0.2.14",
    "silero-vad>=6.2.1",
    "soundfile>=0.14.0",
    "sse-starlette>=3.4.4",
    "torch>=2.12.0",
    "transformers>=5.12.1",
    "uvicorn>=0.49.0",
]
